Correct FieldErrors post icon alignment PR. Create overlay trigger by class

--- a/src/scss/elements/_forms.scss
+++ b/src/scss/elements/_forms.scss
@@ -296,12 +296,13 @@ label {
 // but I thought that might be ok since these are UI elements
 
 .number-field {
+
   .icon {
+    font-size: 14px;
     height: 0;
-    margin-left: -23px;
+    margin-left: -20px;
     pointer-events: none;
     position: relative;
-    top: 3px;
     width: 0;
   }
 
